Refactoring items